bulk info added

--- a/index.html
+++ b/index.html
@@ -49,43 +49,63 @@
 			<!-- Intro -->
 			<article id="about">
 				<h2 class="major">About</h2>
-				<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-				<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum
-					congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut
-					magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a
-						href="#work">awesome work</a>.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent
-					taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique
-					libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut
-					ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor.
-					Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique
-					senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus.
-					Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+				<span class="image main"><img src="images/randPic.jpg" alt="" /></span>
+				<p>Hi, I'm Abdul Noor, a final-year Software Engineering for Business student at UWE Bristol. Throughout
+					my journey, I've gained invaluable experience and knowledge through hands-on projects driven by my
+					passion for mathematics and technology. From developing innovative solutions for fellow students to
+					tackling complex mathematical and logical problems, I've honed my skills and deepened my
+					understanding of these fields. Whether it's optimising processes or enhancing user experiences, I
+					thrive on finding creative solutions to real-world challenges. I'm enthusiastic about connecting
+					with like-minded individuals and leveraging our collective expertise to make meaningful
+					contributions to the ever-evolving tech industry. Let's collaborate and drive innovation together!
+				</p>
 			</article>
 
 			<!-- Work -->
 			<article id="education">
 				<h2 class="major">Education</h2>
-				<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-				<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac.
-					Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer
-					sollicitudin mauris nec lorem luctus ultrices.</p>
-				<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna
-					sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas
-					laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat
-					tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat
-					tempus.</p>
+				<h4>The following key modules have significantly contributed to my development during my studies at UWE
+					Bristol.</h4>
+				<h5 className="mt-2 text-white">Object-Oriented System Development 1</h5>
+				<p className='w-1/2 text-sm text-neutral-400'>This module was my first introduction to OOP
+					(Object-Oriented Programming) and using Java, we were tasked with creating a small program
+					simulating an auto body shop.</p>
+				<h5 className="mt-2 text-white">Object-Oriented System Development 2</h5>
+				<p className='w-1/2 text-sm text-neutral-400'>This module expanded on first-year OOP, focusing on design
+					patterns and GUIs. We used this knowledge to create a UWE Accommodation System for admins to manage
+					their buildings.</p>
+				<h5 className="mt-2 text-white w-1/2">Design and Analysis of Data Structures and Algorithms</h5>
+				<p className='w-1/2 text-sm text-neutral-400'>This module focused on Data Structures and Algorithms,
+					with an emphasis on learning and implementing these concepts using Python.</p>
+				<h5 className="mt-2 text-white">Data, Schemas and Applications</h5>
+				<p className='w-1/2 text-sm text-neutral-400'>This module focused heavily on databases and APIs and
+					their applications. Using the knowledge gained, we were tasked with creating a weather webpage.</p>
+				<h5 className="mt-2 text-white">IT Practice: Collaborative Project</h5>
+				<p className='w-1/2 text-sm text-neutral-400'>This IT project involved consulting with a client to
+					address an issue they were facing, resulting in our development of an email automation system as the
+					solution.</p>
+				<h5 className="mt-2 text-white">Foundations of Computing</h5>
+				<p className='w-1/2 text-sm text-neutral-400'>This module provided an introduction to discrete
+					mathematics and foundational theories in computer science.</p>
 			</article>
 
 			<!-- About -->
 			<article id="projects">
 				<h2 class="major">Projects</h2>
-				<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-				<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at
-					eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula
-					lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada
-					fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum
-					dolor sit amet.</p>
+				<h6 className='mb-2 font-semibold text-white'>UWE Accomodation System - Java, JavaFX</h6>
+				<p className='mb-4 text-neutral-400'>Created a university accomodation system that allows users to
+					manage the rooms within UWE accomodation buildings based on their availability, cleaning status,
+					etc.</p>
+				<h6 className='mb-2 font-semibold text-white'>UWE ITS Help Service - Python, HTML, Tailwind CSS, JS,
+					MySQL</h6>
+				<p className='mb-4 text-neutral-400'>Built a Help Service comprised of two webpages, one as a email
+					automation service utilising a SendGrid Mail API and the other as a FAQ/Q&A page. The goal in
+					creating this was to reduce email traffic for UWE ITS and improve students means of self-service</p>
+				<h6 className='mb-2 font-semibold text-white'>Twin Cities Web Application - PHP, HTML, Tailwind CSS, JS,
+					SQL</h6>
+				<p className='mb-4 text-neutral-400'>Collaboratively developed a Twin Cities web app providing
+					information on London and Paris. Utilised APIs for weather forecasts, Google Maps for points of
+					interest, and an RSS feed for daily local news updates.</p>
 			</article>
 
 			<!-- Contact -->
@@ -112,10 +132,10 @@
 					</ul>
 				</form>
 				<ul class="icons">
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://www.linkedin.com/in/abdul-noor-5349372a5/"
+							class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+					<li><a href="https://github.com/Ismailn16" class="icon brands fa-github"><span
+								class="label">GitHub</span></a></li>
 				</ul>
 			</article>
 
@@ -373,7 +393,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		<!-- Footer -->
 		<footer id="footer">
-			<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+			<p class="copyright">Abdul Sofian Noor</p>
 		</footer>
 
 	</div>
